recursion.logo.koch.PentaKoch.scala.error
Erreur de compilation :
PentaKoch:20: error: not found: value pentaKoch
		pentaKoch(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double]);
                ^